# mahoraga

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  zensical.toml
.github/workflows/: publish-gh-pages.yml  publish-pypi.yml  publish-testpypi.yml  release.yml  update-license-year.yml
docs/: _macros.py  changelog.md  index.md  requirements.in  tutorial.md
docs/advanced/: panel.md  pyapp.md  shards.md  stlite.md
docs/assets/stylesheets/: extra.css
docs/stylesheets/: extra.css
scripts/: _bump_version.py  _github_release.py  _mkdocs_macros.py
src/mahoraga/: __init__.py  __main__.py  _preload.py  _python.py  _uv.py
src/mahoraga/_asgi/: __init__.py  _app.py  _server.py
src/mahoraga/_cli/: Caddyfile.jinja  __init__.py  mahoraga.conf.jinja  mahoraga.toml.jinja
src/mahoraga/_conda/: __init__.py  _models.py  _packages.py  _parselmouth.py  _repodata.py  _sharded_repodata.py  _utils.py
src/mahoraga/_core/: __init__.py  _config.py  _context.py  _metadata.py  _stream.py
src/mahoraga/_jsdelivr/: __init__.py  _gh.py  _npm.py  _pyodide.py  _utils.py
src/mahoraga/_pypi/: __init__.py  _models.py  _packages.py  _simple.py
src/mahoraga/_static/: get_pixi.py  panel_support.py
